refactor(solvedac): 인프라 DTO와 도메인 모델 분리 및 클린 아키텍처 적용