@@ -1,17 +1,26 @@
 package com.ssafy.dash.solvedac.infrastructure;
 
+import com.ssafy.dash.solvedac.domain.ClassStat;
 import com.ssafy.dash.solvedac.domain.SolvedacApiClient;
-import com.ssafy.dash.solvedac.domain.dto.ClassStatResponse;
-import com.ssafy.dash.solvedac.domain.dto.SolvedacUserResponse;
-import com.ssafy.dash.solvedac.domain.dto.TagStatResponse;
-import com.ssafy.dash.solvedac.domain.dto.Top100Response;
+import com.ssafy.dash.solvedac.domain.SolvedacUser;
+import com.ssafy.dash.solvedac.domain.TagStat;
+import com.ssafy.dash.solvedac.domain.Top100Problems;
+import com.ssafy.dash.solvedac.domain.exception.SolvedacApiException;
+import com.ssafy.dash.solvedac.infrastructure.dto.ClassStatResponse;
+import com.ssafy.dash.solvedac.infrastructure.dto.SolvedacUserResponse;
+import com.ssafy.dash.solvedac.infrastructure.dto.TagStatResponse;
+import com.ssafy.dash.solvedac.infrastructure.dto.Top100Response;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestClient;
 import org.springframework.web.client.RestClientException;
+
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Solved.ac API 클라이언트 구현체
@@ -27,13 +36,14 @@ public class SolvedacApiClientImpl implements SolvedacApiClient {
     private final RestClient restClient;
 
     @Override
-    public SolvedacUserResponse getUserInfo(String handle) {
+    public SolvedacUser getUserInfo(String handle) {
         try {
             log.debug("Fetching user info for handle: {}", handle);
-            return restClient.get()
+            SolvedacUserResponse response = restClient.get()
                     .uri(baseUrl + "/user/show?handle={handle}", handle)
                     .retrieve()
                     .body(SolvedacUserResponse.class);
+            return mapToSolvedacUser(response);
         } catch (RestClientException e) {
             log.error("Failed to fetch user info for handle: {}", handle, e);
             throw new SolvedacApiException("사용자 정보를 가져올 수 없습니다: " + handle, e);
@@ -41,14 +51,20 @@ public class SolvedacApiClientImpl implements SolvedacApiClient {
     }
 
     @Override
-    public List<ClassStatResponse> getClassStats(String handle) {
+    public List<ClassStat> getClassStats(String handle) {
         try {
             log.debug("Fetching class stats for handle: {}", handle);
-            ClassStatResponse[] stats = restClient.get()
+            ClassStatResponse[] responses = restClient.get()
                     .uri(baseUrl + "/user/class_stats?handle={handle}", handle)
                     .retrieve()
                     .body(ClassStatResponse[].class);
-            return List.of(stats != null ? stats : new ClassStatResponse[0]);
+
+            if (responses == null) {
+                return Collections.emptyList();
+            }
+            return Arrays.stream(responses)
+                    .map(this::mapToClassStat)
+                    .collect(Collectors.toList());
         } catch (RestClientException e) {
             log.error("Failed to fetch class stats for handle: {}", handle, e);
             throw new SolvedacApiException("클래스 통계를 가져올 수 없습니다: " + handle, e);
@@ -56,13 +72,14 @@ public class SolvedacApiClientImpl implements SolvedacApiClient {
     }
 
     @Override
-    public TagStatResponse getTagStats(String handle) {
+    public TagStat getTagStats(String handle) {
         try {
             log.debug("Fetching tag stats for handle: {}", handle);
-            return restClient.get()
+            TagStatResponse response = restClient.get()
                     .uri(baseUrl + "/user/problem_tag_stats?handle={handle}", handle)
                     .retrieve()
                     .body(TagStatResponse.class);
+            return mapToTagStat(response);
         } catch (RestClientException e) {
             log.error("Failed to fetch tag stats for handle: {}", handle, e);
             throw new SolvedacApiException("태그 통계를 가져올 수 없습니다: " + handle, e);
@@ -70,16 +87,87 @@ public class SolvedacApiClientImpl implements SolvedacApiClient {
     }
 
     @Override
-    public Top100Response getTop100Problems(String handle) {
+    public Top100Problems getTop100Problems(String handle) {
         try {
             log.debug("Fetching top 100 problems for handle: {}", handle);
-            return restClient.get()
+            Top100Response response = restClient.get()
                     .uri(baseUrl + "/user/top_100?handle={handle}", handle)
                     .retrieve()
                     .body(Top100Response.class);
+            return mapToTop100Problems(response);
         } catch (RestClientException e) {
             log.error("Failed to fetch top 100 problems for handle: {}", handle, e);
             throw new SolvedacApiException("상위 100개 문제를 가져올 수 없습니다: " + handle, e);
         }
+    }
+
+    // Mappers
+
+    private SolvedacUser mapToSolvedacUser(SolvedacUserResponse dto) {
+        if (dto == null) return null;
+        return new SolvedacUser(
+                dto.getHandle(),
+                dto.getBio(),
+                dto.getTier(),
+                dto.getRating(),
+                dto.getClassLevel(),
+                dto.getMaxStreak(),
+                dto.getProfileImageUrl(),
+                dto.getSolvedCount()
+        );
+    }
+
+    private ClassStat mapToClassStat(ClassStatResponse dto) {
+        if (dto == null) return null;
+        return new ClassStat(
+                dto.getClassNumber(),
+                dto.getTotal(),
+                dto.getTotalSolved(),
+                dto.getEssentials(),
+                dto.getEssentialSolved(),
+                dto.getDecoration()
+        );
+    }
+
+    private TagStat mapToTagStat(TagStatResponse dto) {
+        if (dto == null) return null;
+        List<TagStat.Item> items = dto.getItems().stream()
+                .map(itemDto -> new TagStat.Item(
+                        new TagStat.TagInfo(
+                                itemDto.getTag().getKey(),
+                                itemDto.getTag().getIsMeta(),
+                                itemDto.getTag().getBojTagId()
+                        ),
+                        itemDto.getTotal(),
+                        itemDto.getSolved(),
+                        itemDto.getPartial(),
+                        itemDto.getTried()
+                ))
+                .collect(Collectors.toList());
+        return new TagStat(dto.getCount(), items);
+    }
+
+    private Top100Problems mapToTop100Problems(Top100Response dto) {
+        if (dto == null) return null;
+        List<Top100Problems.Problem> items = dto.getItems().stream()
+                .map(itemDto -> new Top100Problems.Problem(
+                        itemDto.getProblemId(),
+                        itemDto.getTitleKo(),
+                        itemDto.getLevel(),
+                        itemDto.getTags().stream()
+                                .map(tagDto -> new Top100Problems.Tag(
+                                        tagDto.getKey(),
+                                        tagDto.getBojTagId(),
+                                        tagDto.getDisplayNames().stream()
+                                                .map(dnDto -> new Top100Problems.DisplayName(
+                                                        dnDto.getLanguage(),
+                                                        dnDto.getName()
+                                                ))
+                                                .collect(Collectors.toList())
+                                ))
+                                .collect(Collectors.toList())
+                ))
+                .collect(Collectors.toList());
+        return new Top100Problems(dto.getCount(), items);
     }
 }
